--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,11 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
-    testCompileOnly 'org.projectlombok:lombok'
+    compileOnly 'com.h2database:h2:1.4.199'
+    testCompileOnly 'org.projectlombok:lombok'// https://mvnrepository.com/artifact/com.h2database/h2
+    testCompile 'com.h2database:h2:1.4.199'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
     runtimeOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
