--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'com.h2database:h2:1.4.199'
     testCompileOnly 'org.projectlombok:lombok'// https://mvnrepository.com/artifact/com.h2database/h2
