--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     compileOnly 'org.projectlombok:lombok'
     compileOnly 'com.h2database:h2:1.4.199'
-    testCompileOnly 'org.projectlombok:lombok'// https://mvnrepository.com/artifact/com.h2database/h2
+    testCompileOnly 'org.projectlombok:lombok'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.12.2'
     testCompile 'com.h2database:h2:1.4.199'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
